# aeronav

./: FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  README.md  SUGGESTIONS.md  VISION_CONTROL_SUMMARY.md  docker-compose.yml
agents/lighting/: Dockerfile  main.py
agents/robot-arm/: main.py
audio-service/: Dockerfile  main.py
backend/vision_service/: Dockerfile  INTEGRATION.md  README.md  __init__.py  cuda_processor.py  docker-compose.yml  requirements.txt  server.py
backend/vision_service/models/: hand_tracker.py  pose_estimator.py  yolo_detector.py
frontend/: FEATURES.md  IDEAS_CUDA_WEBCAM.md  README.md  index.html  index.tsx
frontend/components/: App.tsx  AugmentationPanel.tsx  CommandPalette.tsx  ConfigPanel.tsx  ControlSignalDisplay.tsx  CrashReporter.tsx  DevTools.tsx  ErrorBoundary.tsx  ExportMenu.tsx  LogViewer.tsx  MiniChart.tsx  ModelViewer.tsx  MultiAgentDashboard.tsx  ObjectDetectionView.tsx  PerformanceProfiler.tsx  PoseEstimationView.tsx  RLBackendPanel.tsx  SimulationCanvas.tsx  StatusBadge.tsx  TrainingDashboard.tsx  VisionControlPanel.tsx  WebcamViewer.tsx
frontend/config/: default.json  development.json  production.json
frontend/constants/: proto.ts
frontend/hooks/: useAudioAnalyzer.ts  useHandTracking.ts  useKeyboardShortcuts.ts  usePerformanceProfiler.ts  useRLBackend.ts  useWebcam.ts
frontend/types/: index.ts
frontend/utils/: audioAugmentation.ts  config.ts  exportUtils.ts  handTracking.ts  logger.ts  modelLoader.ts  multiAgentSystem.ts  physicsEngine.ts  usdExporter.ts  visionBackendClient.ts  visionPresets.ts  wasmAudioProcessor.ts  wasmPhysicsEngine.ts  websocketClient.ts
frontend/workers/: audioProcessor.worker.ts
native/audio/: CMakeLists.txt
native/audio/bindings/: wasm_audio_bindings.cpp
native/audio/src/: audio_augmentation.cpp  audio_augmentation.hpp  audio_fft.cpp  audio_fft.hpp
native/collision/: CMakeLists.txt
native/collision/bindings/: wasm_collision_bindings.cpp
native/collision/src/: collision.cpp  collision.hpp
native/dsp/: CMakeLists.txt
native/dsp/bindings/: wasm_dsp_bindings.cpp
native/dsp/src/: dsp.cpp  dsp.hpp
native/geometry/: CMakeLists.txt
native/geometry/bindings/: wasm_geo_bindings.cpp
native/geometry/src/: mesh.cpp  mesh.hpp
native/math/: CMakeLists.txt
native/math/bindings/: wasm_math_bindings.cpp
native/math/src/: math_utils.cpp  math_utils.hpp
native/pathfinding/: CMakeLists.txt
native/pathfinding/bindings/: wasm_pathfinding_bindings.cpp
native/pathfinding/src/: pathfinding.cpp  pathfinding.hpp
native/physics/: CMakeLists.txt
native/physics/bindings/: wasm_bindings.cpp
native/physics/src/: physics_engine.cpp  physics_engine.hpp  quaternion.hpp  rigid_body.cpp  rigid_body.hpp  vector3.hpp
native/rl/: CMakeLists.txt
native/rl/bindings/: wasm_rl_bindings.cpp
native/rl/src/: multi_agent.cpp  multi_agent.hpp
native/spatial/: CMakeLists.txt
native/spatial/bindings/: wasm_spatial_bindings.cpp
native/spatial/src/: spatial.cpp  spatial.hpp
proto/: simulation.proto
ralph/: prd.json  progress.txt
scripts/: build-wasm.sh
sim-controller/: main.py
